# Project-1-intersection-of-triangles-

./: CMakeLists.txt  README.md  draw.h  draw.tpp  main.cpp  point.cpp  point.h  point.tpp  polygon.h  polygon.tpp  triangle.cpp  triangle.h  triangle.tpp  triangle_1.cpp  triangle_1.h  Отчет Бабушкиной Анны.docx
classes/: point.h  point.tpp  triangle.h  triangle.tpp
src/: main.cpp
src/classes/: Polyhedron.cpp  Polyhedron.h
src/draw/: draw.h  draw.tpp
src/point/: point.h  point.tpp
src/polygon/: polygon.h  polygon.tpp
src/triangle/: triangle.h  triangle.tpp
test/: CMakeLists.txt  test.cpp
